--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
+# OS generated files
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+*.swp
+
+# R
+#######################
+.Rhistory
+
+# Python
+#######################
+*.py[cod]
+*.so
+*.egg
+*.egg-info
+*.pkl
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+pip-log.txt
+.coverage
+.tox
+nosetests.xml
+*.mo
+.idea
+.hg
+.hgignore
+
+
+# OSF-specific 
+#######################
+Site/Cache/*
+Site/Uploads/*
