--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ Icon?
 ehthumbs.db
 Thumbs.db
 *.swp
+*~
+.*~
 
 # R
 #######################
@@ -41,7 +43,7 @@ nosetests.xml
 .idea
 .hg
 .hgignore
-
+*.env
 
 # OSF-specific 
 #######################
