--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
+services: mongodb
+
 python:
-    - "2.6"
     - "2.7"
-    - "3.3"
-    - "pypy"
+
 install:
-    - "pip install -U ."
+    - "pip install --upgrade ."
+
 script: "nosetests"
