--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist =py26,py27,py33
+envlist =py27,py33,pypy
 [testenv]
-deps=nose
+deps = -rdev-requirements.txt
 commands=
     nosetests
