--- a/.gitignore
+++ b/.gitignore
@@ -48,10 +48,8 @@ nosetests.xml
 # Coverage
 cover
 
-# OSF-specific
-#######################
-Site/Cache/*
-Site/Uploads/*
-
 # Readme build
 README.html
+
+# Docs build
+_build
